Fix send page layout
I decided not to use "mailpoet-main-container" because it's too wide, for two 368px columns.

[MAILPOET-5734]

--- a/mailpoet/assets/css/src/components-plugin/_newsletter.scss
+++ b/mailpoet/assets/css/src/components-plugin/_newsletter.scss
@@ -14,3 +14,14 @@
 .send-newsletter-buttons {
   justify-content: flex-end;
 }
+
+.mailpoet-form-send-email {
+  .mailpoet-form-grid {
+    grid-template-columns: $grid-column $grid-column;
+    max-width: 976px;
+
+    @include respond-to(small-screen) {
+      grid-template-columns: 1fr;
+    }
+  }
+}
